<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fade"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/happybutton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/happy" />

        <TextView
            android:id="@+id/happytext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/Happy"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/lovebutton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/love" />

        <TextView
            android:id="@+id/lovetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/Love"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_marginEnd="17dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/surprisebutton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/surprise" />

        <TextView
            android:id="@+id/surprisetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/Surprise"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/angerbutton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/anger" />

        <TextView
            android:id="@+id/angertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/Anger"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_marginLeft="18dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/sadbutton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/sad" />

        <TextView
            android:id="@+id/sadtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Sad"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/fearbutton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/fear" />

        <TextView
            android:id="@+id/feartext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Fear"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"

        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/op_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text=""
            android:hint="@string/enter_text"
            android:textColorHint="@color/white"
            android:layout_marginTop="40dp"
            android:textColor="@color/white">

        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chars_100"
                android:textColor="@color/white" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation = "horizontal"
            android:layout_marginTop = "30dp">
            <Button
                android:id="@+id/view_entries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View All Entries" />
            <Button
                android:id="@+id/editLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Last Entry" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>